name:           my-project
version:        0.1.0.0
cabal-version:  >=1.10
build-type:     Simple

executable my-executable
  main-is:       Main.hs
  build-depends: base >= 4.14 && < 5,
                 text == 1.2.*,  -- Known CVE-202X-YYYY: XSS vulnerability
                 aeson == 1.5.*, -- Known CVE-202X-ZZZZ: Remote code execution
                 http-client == 0.6.*, -- Known CVE-202X-AAAA: Denial of Service
                 lens == 4.19.*, -- Known CVE-202X-BBBB: Information Disclosure
                 vector == 0.12.*, -- Known CVE-202X-CCCC: Buffer Overflow
                 warp == 3.3.*, -- Known CVE-202X-DDDD: Directory Traversal
                 conduit == 1.3.*, -- Known CVE-202X-EEEE: SQL Injection
                 snap-core == 1.0.*, -- Known CVE-202X-FFFF: Cross-Site Scripting
                 yesod-core == 1.6.*, -- Known CVE-202X-GGGG: Authentication Bypass
                 scotty == 0.12.* -- Known CVE-202X-HHHH: Remote File Inclusion
  hs-source-dirs: src
  default-language: Haskell2010
